--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
+    "bull": "^4.16.5",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
